# the-ultimate-GAN

./: .gitignore  README.md  pyproject.toml  requirements.txt
the_ultimate_gan/: __init__.py  cli.py  utils.py
the_ultimate_gan/models/c_gan/: layers.py  model.py
the_ultimate_gan/models/dc_gan/: layers.py  model.py
the_ultimate_gan/models/ls_gan/: model.py
the_ultimate_gan/models/pix2pix/: dataset.py  layers.py  model.py
the_ultimate_gan/models/simple_gan/: layers.py  model.py
the_ultimate_gan/models/w_gan/: layers.py  model.py
the_ultimate_gan/models/w_gan_gp/: model.py
