[tool.poetry]
name = "the_ultimate_gan"
version = "0.1.0"
description = "Learn, Train and Explore Generative Adversarial Networks"
authors = ["Zohaibb-m <zohaibmunir32@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = ">=2.3.0,<2.4.0"
click = "8.1.7"
tqdm = ">=4.66.4,<4.67.0"
numpy = "1.26.4"
tensorboard = "^2.18.0"
torchvision = ">=0.18.0,<0.19.0"
torchinfo = ">=1.8.0,<1.9.0"
matplotlib = "^3.9.2"
pillow = "10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tugan = "the_ultimate_gan.cli:tugan"

[tool.black]
line-length = 164
